--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # data source
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://db:5432/aluraflix
+spring.datasource.url=jdbc:postgresql://localhost:5432/aluraflix
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.initialization-mode=always
