--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 server.port=${PORT}
+
+#Front End
+front.uri=https://drigues90.github.io
