atualizacao de properties para deploy

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,3 +13,10 @@ server.port=${PORT}
 
 #Front End
 front.uri=https://drigues90.github.io
+
+# jwt
+jwt.secret=${SECRET}
+jwt.expiration=1800000
+
+#devtools
+server.error.include-stacktrace=never
